--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vioo - Ultimate Shopping Platform</title>
+  <title>Vioo - Multidevice</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
@@ -126,10 +126,10 @@
           <img src="https://files.catbox.moe/gmbcl9.png" alt="Vioo Logo" class="w-full h-full object-cover">
         </div>
         <h1 class="text-4xl md:text-6xl font-bold mb-6 slide-in">
-          <span class="bg-clip-text text-transparent bg-gradient-to-r from-yellow-600 to-yellow-400">VIOO</span> STORE
+          <span class="bg-clip-text text-transparent bg-gradient-to-r from-yellow-600 to-yellow-400">VIOO</span> MULTIDEVICE
         </h1>
         <p class="text-xl md:text-2xl max-w-3xl mx-auto mb-10 slide-in delay-1">
-          Premium Shopping Platform with <span class="font-semibold text-yellow-600">1100+ Powerful Features</span>
+          Premium Bot WhatsApp with <span class="font-semibold text-yellow-600">1100+ Powerful Features</span>
         </p>
         <div class="flex flex-col sm:flex-row justify-center gap-4 slide-in delay-2">
           <a href="https://wa.me/6282285899023" class="glossy-button text-white font-bold py-4 px-8 rounded-full text-lg mx-auto sm:mx-0">
@@ -204,7 +204,7 @@
       </div>
       <p class="text-lg mb-6">Harga Normal: <span class="line-through">Rp 150.000</span></p>
       <a href="https://wa.me/6282285899023" class="slide-button glossy-button text-white font-bold py-4 px-8 rounded-full text-lg inline-block">
-        <i class="fas fa-gift mr-2"></i> DAPATKAN DISKON
+        <i class="fas fa-gift mr-2"></i> DAPATKAN DISKON SAMPAI HARI RAYA!
       </a>
     </div>
   </div>
