--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vioo - MultiDevice</title>
+  <title>Vioo - Ultimate Shopping Platform</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
@@ -99,7 +99,7 @@
           <span class="bg-clip-text text-transparent bg-gradient-to-r from-yellow-600 to-yellow-400">VIOO</span> MULTIDEVICE
         </h1>
         <p class="text-xl md:text-2xl max-w-3xl mx-auto mb-10 slide-in delay-1">
-          Premium Shopping Platform with <span class="font-semibold text-yellow-600">1100+ Powerful Features</span>
+          WhatsApp Bot Premium Platform with <span class="font-semibold text-yellow-600">1100+ Powerful Features</span>
         </p>
         <div class="flex flex-col sm:flex-row justify-center gap-4 slide-in delay-2">
           <a href="https://wa.me/6282285899023" class="glossy-button text-white font-bold py-4 px-8 rounded-full text-lg">
@@ -109,7 +109,7 @@
             Jelajahi Fitur
           </a>
           <a href="https://wa.me/6283831409855" class="glossy-button text-white font-bold py-4 px-8 rounded-full text-lg">
-            <i class="fas fa-robot mr-2"></i> Test Bot
+            <i class="fas fa-robot mr-2"></i> Testing Bot
           </a>
         </div>
       </div>
@@ -135,7 +135,7 @@
   </div>
   <div id="features" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
     <h2 class="text-3xl md:text-4xl font-bold text-center mb-4">Keunggulan <span class="text-yellow-600">VIOO</span></h2>
-    <p class="text-xl text-center max-w-3xl mx-auto mb-12">Platform belanja modern dengan fitur terkini</p>
+    <p class="text-xl text-center max-w-3xl mx-auto mb-12">Bot WhatsApp Moderen Dengan Fitur Terkini! Recommended Seperti Nova Multidevice!</p>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
       <div class="glossy-card p-6">
         <div class="text-4xl mb-4 feature-icon">
@@ -166,7 +166,7 @@
       <div class="text-4xl md:text-5xl font-bold bg-gradient-to-r from-yellow-600 to-yellow-400 bg-clip-text text-transparent inline-block mb-6">
         Rp 50.000
       </div>
-      <p class="text-lg mb-6">Harga Normal: <span class="line-through">Rp 150.000</span></p>
+      <p class="text-lg mb-6">Harga Normal: <span class="line-through">Rp 80.000</span></p>
       <a href="https://wa.me/6282285899023" class="slide-button glossy-button text-white font-bold py-4 px-8 rounded-full text-lg inline-block">
         <i class="fas fa-gift mr-2"></i> DAPATKAN DISKON
       </a>
@@ -214,7 +214,7 @@
   </a>
   <footer class="bg-gray-100 py-8">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-      <p class="text-gray-600">&copy; 2025 Vioo Store. All rights reserved.</p>
+      <p class="text-gray-600">&copy; 2025 Rim Official. All rights reserved.</p>
       <div class="mt-4 flex justify-center gap-6">
         <a href="#" class="footer-link text-gray-600 text-xl"><i class="fab fa-facebook-f"></i></a>
         <a href="#" class="footer-link text-gray-600 text-xl"><i class="fab fa-twitter"></i></a>
