--- a/index.html
+++ b/index.html
@@ -1,236 +1,2 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vioo - Ultimate Shopping Platform</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #f9f9f9 0%, #ffffff 100%);
-      overflow-x: hidden;
-    }
-    .glossy-card {
-      background: linear-gradient(145deg, rgba(255,255,255,0.9) 0%, rgba(255,255,255,0.7) 100%);
-      backdrop-filter: blur(10px);
-      border-radius: 20px;
-      box-shadow: 0 15px 30px rgba(255, 215, 0, 0.1), inset 0 2px 5px rgba(255,255,255,0.5);
-      border: 1px solid rgba(255,255,255,0.3);
-      transition: all 0.3s ease;
-    }
-    .glossy-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 20px 40px rgba(255, 215, 0, 0.2), inset 0 2px 5px rgba(255,255,255,0.5);
-    }
-    .glossy-button {
-      background: linear-gradient(145deg, #FFD700 0%, #FFC400 100%);
-      box-shadow: 0 4px 15px rgba(255, 215, 0, 0.4);
-      transition: all 0.3s ease;
-      position: relative;
-      overflow: hidden;
-    }
-    .glossy-button:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 8px 25px rgba(255, 215, 0, 0.6);
-    }
-    .glossy-button:active {
-      transform: translateY(1px);
-    }
-    .glossy-button::after {
-      content: '';
-      position: absolute;
-      top: -50%;
-      left: -50%;
-      width: 200%;
-      height: 200%;
-      background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 60%);
-      transform: rotate(30deg);
-      transition: all 0.3s ease;
-    }
-    .thumbnail-circle {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      border: 4px solid #FFD700;
-      box-shadow: 0 0 20px rgba(255, 215, 0, 0.3);
-      margin: 0 auto;
-      overflow: hidden;
-    }
-    .feature-icon {
-      background: linear-gradient(145deg, #FFD700 0%, #FFC400 100%);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-    }
-    .slide-button {
-      animation: pulse 2s infinite;
-    }
-    @keyframes pulse {
-      0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(255, 215, 0, 0.7); }
-      70% { transform: scale(1.03); box-shadow: 0 0 0 10px rgba(255, 215, 0, 0); }
-      100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(255, 215, 0, 0); }
-    }
-    .slide-in {
-      animation: slideIn 0.5s ease-out forwards;
-    }
-    @keyframes slideIn {
-      from { opacity: 0; transform: translateY(50px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    .testimonial-slider { position: relative; overflow: hidden; }
-    .testimonial-container { display: flex; transition: transform 0.5s ease-in-out; }
-    .testimonial { min-width: 100%; box-sizing: border-box; }
-    .keuntungan-item { background: linear-gradient(145deg, #FFF9C4 0%, #FFFDE7 100%); border-radius: 10px; padding: 20px; text-align: center; box-shadow: 0 4px 15px rgba(255, 215, 0, 0.3); }
-    .footer-link:hover { text-decoration: underline; }
-  </style>
-</head>
-<body class="min-h-screen text-gray-800">
-  <div class="relative overflow-hidden">
-    <div class="absolute inset-0 bg-gradient-to-r from-yellow-50 to-white opacity-90"></div>
-    <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20 md:py-32">
-      <div class="text-center">
-        <div class="thumbnail-circle mb-8">
-          <img src="https://files.catbox.moe/gmbcl9.png" alt="Vioo Logo" class="w-full h-full object-cover">
-        </div>
-        <h1 class="text-4xl md:text-6xl font-bold mb-6 slide-in">
-          <span class="bg-clip-text text-transparent bg-gradient-to-r from-yellow-600 to-yellow-400">VIOO</span> MULTIDEVICE
-        </h1>
-        <p class="text-xl md:text-2xl max-w-3xl mx-auto mb-10 slide-in delay-1">
-          WhatsApp Bot Premium Platform with <span class="font-semibold text-yellow-600">1100+ Powerful Features</span>
-        </p>
-        <div class="flex flex-col sm:flex-row justify-center gap-4 slide-in delay-2">
-          <a href="https://wa.me/6282285899023" class="glossy-button text-white font-bold py-4 px-8 rounded-full text-lg">
-            <i class="fab fa-whatsapp mr-2"></i> Hubungi Kami
-          </a>
-          <a href="#features" class="bg-white text-yellow-600 font-bold py-4 px-8 rounded-full text-lg border-2 border-yellow-600 hover:bg-yellow-50 transition-all">
-            Jelajahi Fitur
-          </a>
-          <a href="https://wa.me/6283831409855" class="glossy-button text-white font-bold py-4 px-8 rounded-full text-lg">
-            <i class="fas fa-robot mr-2"></i> Testing Bot
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mb-16 slide-in delay-3">
-    <div class="glossy-card p-6 md:p-8">
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
-        <div>
-          <div class="text-4xl font-bold text-yellow-600">150K+</div>
-          <div class="text-gray-600">Pembeli Aktif</div>
-        </div>
-        <div>
-          <div class="text-4xl font-bold text-yellow-600">99.9%</div>
-          <div class="text-gray-600">Kepuasan Pelanggan</div>
-        </div>
-        <div>
-          <div class="text-4xl font-bold text-yellow-600">24/7</div>
-          <div class="text-gray-600">Layanan Support</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="features" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
-    <h2 class="text-3xl md:text-4xl font-bold text-center mb-4">Keunggulan <span class="text-yellow-600">VIOO</span></h2>
-    <p class="text-xl text-center max-w-3xl mx-auto mb-12">Bot WhatsApp Moderen Dengan Fitur Terkini! Recommended Seperti Nova Multidevice!</p>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-      <div class="glossy-card p-6">
-        <div class="text-4xl mb-4 feature-icon">
-          <i class="fas fa-sync-alt"></i>
-        </div>
-        <h3 class="text-xl font-bold mb-3">Update Gratis</h3>
-        <p class="text-gray-600">Update fitur terbaru secara berkala tanpa biaya tambahan</p>
-      </div>
-      <div class="glossy-card p-6">
-        <div class="text-4xl mb-4 feature-icon">
-          <i class="fas fa-shield-alt"></i>
-        </div>
-        <h3 class="text-xl font-bold mb-3">Keamanan Premium</h3>
-        <p class="text-gray-600">Sistem enkripsi tingkat tinggi untuk transaksi aman</p>
-      </div>
-      <div class="glossy-card p-6">
-        <div class="text-4xl mb-4 feature-icon">
-          <i class="fas fa-bolt"></i>
-        </div>
-        <h3 class="text-xl font-bold mb-3">Cepat & Responsif</h3>
-        <p class="text-gray-600">Optimasi performa untuk kecepatan maksimal</p>
-      </div>
-    </div>
-  </div>
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
-    <div class="glossy-card p-8 text-center bg-gradient-to-r from-yellow-100 to-white">
-      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-yellow-600">PENAWARAN TERBATAS!</h2>
-      <div class="text-4xl md:text-5xl font-bold bg-gradient-to-r from-yellow-600 to-yellow-400 bg-clip-text text-transparent inline-block mb-6">
-        Rp 50.000
-      </div>
-      <p class="text-lg mb-6">Harga Normal: <span class="line-through">Rp 80.000</span></p>
-      <a href="https://wa.me/6282285899023" class="slide-button glossy-button text-white font-bold py-4 px-8 rounded-full text-lg inline-block">
-        <i class="fas fa-gift mr-2"></i> DAPATKAN DISKON
-      </a>
-    </div>
-  </div>
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
-    <h2 class="text-3xl md:text-4xl font-bold text-center mb-4">Keuntungan Bergabung</h2>
-    <p class="text-xl text-center max-w-3xl mx-auto mb-12">Nikmati berbagai keuntungan eksklusif dengan menggunakan Vioo</p>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-      <div class="keuntungan-item">
-        <i class="fas fa-shopping-cart text-5xl text-yellow-600 mb-4"></i>
-        <h3 class="text-2xl font-bold mb-2">Belanja Mudah</h3>
-        <p class="text-gray-600">Proses belanja yang cepat dan simpel.</p>
-      </div>
-      <div class="keuntungan-item">
-        <i class="fas fa-lock text-5xl text-yellow-600 mb-4"></i>
-        <h3 class="text-2xl font-bold mb-2">Keamanan Terjamin</h3>
-        <p class="text-gray-600">Transaksi aman dengan sistem enkripsi canggih.</p>
-      </div>
-      <div class="keuntungan-item">
-        <i class="fas fa-headset text-5xl text-yellow-600 mb-4"></i>
-        <h3 class="text-2xl font-bold mb-2">Support 24/7</h3>
-        <p class="text-gray-600">Dukungan pelanggan kapan saja Anda butuhkan.</p>
-      </div>
-    </div>
-  </div>
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16 bg-gray-50">
-    <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Testimoni Pengguna</h2>
-    <div class="testimonial-slider relative">
-      <div class="testimonial-container">
-        <div class="testimonial glossy-card p-8 flex flex-col items-center text-center">
-          <p class="text-gray-600 mb-4">"Vioo benar-benar mengubah cara saya berbelanja online. Fiturnya lengkap dan mudah digunakan!"</p>
-          <h4 class="font-bold text-lg">- Budi, Pengusaha</h4>
-        </div>
-        <div class="testimonial glossy-card p-8 flex flex-col items-center text-center">
-          <p class="text-gray-600 mb-4">"Pelayanan cepat dan sistem pembayaran yang aman. Recommended banget!"</p>
-          <h4 class="font-bold text-lg">- Siti, Ibu Rumah Tangga</h4>
-        </div>
-      </div>
-    </div>
-  </div>
-  <a href="https://wa.me/6282285899023" class="fixed bottom-8 right-8 glossy-button text-white font-bold py-4 px-8 rounded-full text-lg flex items-center gap-2 shadow-lg">
-    <i class="fab fa-whatsapp fa-lg"></i>
-    <span>Chat Kami</span>
-  </a>
-  <footer class="bg-gray-100 py-8">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-      <p class="text-gray-600">&copy; 2025 Rim Official. All rights reserved.</p>
-      <div class="mt-4 flex justify-center gap-6">
-        <a href="#" class="footer-link text-gray-600 text-xl"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="footer-link text-gray-600 text-xl"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="footer-link text-gray-600 text-xl"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="footer-link text-gray-600 text-xl"><i class="fab fa-linkedin-in"></i></a>
-      </div>
-    </div>
-  </footer>
-  <script>
-    let currentSlide = 0;
-    const container = document.querySelector('.testimonial-container');
-    const slides = document.querySelectorAll('.testimonial');
-    setInterval(() => {
-      currentSlide = (currentSlide + 1) % slides.length;
-      container.style.transform = `translateX(-${currentSlide * 100}%)`;
-    }, 4000);
-  </script>
-</body>
-</html>
+<script>
+document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%69%64%22%3E%3C%68%65%61%64%3E%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%2F%3E%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%22%2F%3E%3C%74%69%74%6C%65%3E%56%69%6F%6F%20%2D%20%4C%75%78%75%72%79%20%53%68%6F%70%70%69%6E%67%3C%2F%74%69%74%6C%65%3E%3C%73%63%72%69%70%74%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%63%64%6E%2E%74%61%69%6C%77%69%6E%64%63%73%73%2E%63%6F%6D%22%3E%3C%2F%73%63%72%69%70%74%3E%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%63%64%6E%6A%73%2E%63%6C%6F%75%64%66%6C%61%72%65%2E%63%6F%6D%2F%61%6A%61%78%2F%6C%69%62%73%2F%66%6F%6E%74%2D%61%77%65%73%6F%6D%65%2F%36%2E%34%2E%30%2F%63%73%73%2F%61%6C%6C%2E%6D%69%6E%2E%63%73%73%22%2F%3E%3C%73%74%79%6C%65%3E%40%69%6D%70%6F%72%74%20%75%72%6C%28%27%68%74%74%70%73%3A%2F%2F%66%6F%6E%74%73%2E%67%6F%6F%67%6C%65%61%70%69%73%2E%63%6F%6D%2F%63%73%73%32%3F%66%61%6D%69%6C%79%3D%50%6F%70%70%69%6E%73%3A%77%67%68%74%40%33%30%30%3B%34%30%30%3B%36%30%30%3B%37%30%30%26%64%69%73%70%6C%61%79%3D%73%77%61%70%27%29%3B%62%6F%64%79%7B%66%6F%6E%74%2D%66%61%6D%69%6C%79%3A%27%50%6F%70%70%69%6E%73%27%2C%73%61%6E%73%2D%73%65%72%69%66%3B%62%61%63%6B%67%72%6F%75%6E%64%3A%6C%69%6E%65%61%72%2D%67%72%61%64%69%65%6E%74%28%31%33%35%64%65%67%2C%23%66%39%66%39%66%39%20%30%25%2C%23%66%66%66%20%31%30%30%25%29%3B%6F%76%65%72%66%6C%6F%77%2D%78%3A%68%69%64%64%65%6E%7D%2E%67%6C%6F%73%73%79%2D%63%61%72%64%7B%62%61%63%6B%67%72%6F%75%6E%64%3A%6C%69%6E%65%61%72%2D%67%72%61%64%69%65%6E%74%28%31%34%35%64%65%67%2C%72%67%62%61%28%32%35%35%2C%32%35%35%2C%32%35%35%2C%30%2E%39%29%20%30%25%2C%72%67%62%61%28%32%35%35%2C%32%35%35%2C%32%35%35%2C%30%2E%37%29%20%31%30%30%25%29%3B%62%61%63%6B%64%72%6F%70%2D%66%69%6C%74%65%72%3A%62%6C%75%72%28%31%30%70%78%29%3B%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%32%30%70%78%3B%62%6F%78%2D%73%68%61%64%6F%77%3A%30%20%31%35%70%78%20%33%30%70%78%20%72%67%62%61%28%32%35%35%2C%32%31%35%2C%30%2C%30%2E%31%29%2C%69%6E%73%65%74%20%30%20%32%70%78%20%35%70%78%20%72%67%62%61%28%32%35%35%2C%32%35%35%2C%32%35%35%2C%30%2E%35%29%3B%62%6F%72%64%65%72%3A%31%70%78%20%73%6F%6C%69%64%20%72%67%62%61%28%32%35%35%2C%32%35%35%2C%32%35%35%2C%30%2E%33%29%3B%74%72%61%6E%73%69%74%69%6F%6E%3A%61%6C%6C%20%30%2E%33%73%20%65%61%73%65%7D%2E%67%6C%6F%73%73%79%2D%63%61%72%64%3A%68%6F%76%65%72%7B%74%72%61%6E%73%66%6F%72%6D%3A%74%72%61%6E%73%6C%61%74%65%59%28%2D%35%70%78%29%3B%62%6F%78%2D%73%68%61%64%6F%77%3A%30%20%32%30%70%78%20%34%30%70%78%20%72%67%62%61%28%32%35%35%2C%32%31%35%2C%30%2C%30%2E%32%29%2C%69%6E%73%65%74%20%30%20%32%70%78%20%35%70%78%20%72%67%62%61%28%32%35%35%2C%32%35%35%2C%32%35%35%2C%30%2E%35%29%7D%2E%67%6C%6F%73%73%79%2D%62%75%74%74%6F%6E%7B%62%61%63%6B%67%72%6F%75%6E%64%3A%6C%69%6E%65%61%72%2D%67%72%61%64%69%65%6E%74%28%31%34%35%64%65%67%2C%23%46%46%44%37%30%30%20%30%25%2C%23%46%46%43%34%30%30%20%31%30%30%25%29%3B%62%6F%78%2D%73%68%61%64%6F%77%3A%30%20%34%70%78%20%31%35%70%78%20%72%67%62%61%28%32%35%35%2C%32%31%35%2C%30%2C%30%2E%34%29%3B%74%72%61%6E%73%69%74%69%6F%6E%3A%61%6C%6C%20%30%2E%33%73%20%65%61%73%65%3B%70%6F%73%69%74%69%6F%6E%3A%72%65%6C%61%74%69%76%65%3B%6F%76%65%72%66%6C%6F%77%3A%68%69%64%64%65%6E%7D%40%6B%65%79%66%72%61%6D%65%73%20%70%75%6C%73%65%7B%30%25%7B%74%72%61%6E%73%66%6F%72%6D%3A%73%63%61%6C%65%28%31%29%3B%62%6F%78%2D%73%68%61%64%6F%77%3A%30%20%30%20%30%20%30%20%72%67%62%61%28%32%35%35%2C%32%31%35%2C%30%2C%30%2E%37%29%7D%37%30%25%7B%74%72%61%6E%73%66%6F%72%6D%3A%73%63%61%6C%65%28%31%2E%30%35%29%3B%62%6F%78%2D%73%68%61%64%6F%77%3A%30%20%30%20%30%20%31%30%70%78%20%74%72%61%6E%73%70%61%72%65%6E%74%7D%31%30%30%25%7B%74%72%61%6E%73%66%6F%72%6D%3A%73%63%61%6C%65%28%31%29%3B%62%6F%78%2D%73%68%61%64%6F%77%3A%30%20%30%20%30%20%30%20%74%72%61%6E%73%70%61%72%65%6E%74%7D%7D%3C%2F%73%74%79%6C%65%3E%3C%2F%68%65%61%64%3E%3C%62%6F%64%79%20%63%6C%61%73%73%3D%22%6D%69%6E%2D%68%2D%73%63%72%65%65%6E%20%74%65%78%74%2D%67%72%61%79%2D%38%30%30%22%3E%3C%64%69%76%20%63%6C%61%73%73%3D%22%72%65%6C%61%74%69%76%65%20%6F%76%65%72%66%6C%6F%77%2D%68%69%64%64%65%6E%22%3E%3C%64%69%76%20%63%6C%61%73%73%3D%22%61%62%73%6F%6C%75%74%65%20%69%6E%73%65%74%2D%30%20%62%67%2D%67%72%61%64%69%65%6E%74%2D%74%6F%2D%72%20%66%72%6F%6D%2D%79%65%6C%6C%6F%77%2D%35%30%20%74%6F%2D%77%68%69%74%65%20%6F%70%61%63%69%74%79%2D%39%30%22%3E%3C%2F%64%69%76%3E%3C%64%69%76%20%63%6C%61%73%73%3D%22%72%65%6C%61%74%69%76%65%20%6D%61%78%2D%77%2D%37%78%6C%20%6D%78%2D%61%75%74%6F%20%70%78%2D%34%20%73%6D%3A%70%78%2D%36%20%6C%67%3A%70%78%2D%38%20%70%79%2D%32%30%20%6D%64%3A%70%79%2D%33%32%22%3E%3C%64%69%76%20%63%6C%61%73%73%3D%22%74%65%78%74%2D%63%65%6E%74%65%72%22%3E%3C%64%69%76%20%63%6C%61%73%73%3D%22%74%68%75%6D%62%6E%61%69%6C%2D%63%69%72%63%6C%65%20%6D%62%2D%38%22%3E%3C%69%6D%67%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%66%69%6C%65%73%2E%63%61%74%62%6F%78%2E%6D%6F%65%2F%67%6D%62%63%6C%39%2E%70%6E%67%22%20%61%6C%74%3D%22%4C%6F%67%6F%22%20%63%6C%61%73%73%3D%22%77%2D%66%75%6C%6C%20%68%2D%66%75%6C%6C%20%6F%62%6A%65%63%74%2D%63%6F%76%65%72%22%2F%3E%3C%2F%64%69%76%3E%3C%68%31%20%63%6C%61%73%73%3D%22%74%65%78%74%2D%34%78%6C%20%6D%64%3A%74%65%78%74%2D%36%78
